Fix issue on firefox not displaying images correctly

--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ nav {
 .carousel-slide {
     display: flex;
     width: 100%;
-    height: auto;
+    height: 45vh;
 }
 
 button {
